added public pages

--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,8 @@
 </head>
 
 <body>
-    
+    <h1>DnD Econ</h1>
+    <a href="signin.html">Sign In</a>
+    <a href="/actor">View Home Page</a>
+    <a href="market.html">View Market</a>
 </body>
