added basic market screen

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,5 @@
     <h1>DnD Econ</h1>
     <a href="signin.html">Sign In</a>
     <a href="/actor">View Home Page</a>
-    <a href="market.html">View Market</a>
+    <a href="/market">View Market</a>
 </body>
