--- a/public/actor/index.html
+++ b/public/actor/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1 id="title">Actor Page</h1>
     <a href="../index.html">Home</a>
+    <a href="../market/">View Market</a>
     <br><br>
 
     <script>
