restructure html pages

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <h1>DnD Econ</h1>
-    <a href="signin.html">Sign In</a>
-    <a href="/actor">View Home Page</a>
-    <a href="/market">View Market</a>
+    <a href="market.html">Market View</a>
+    <a href="/player_view">Player View</a>
+    <a href="/dm_view">DM View</a>
 </body>
