--- a/public/player_view/index.html
+++ b/public/player_view/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1 id="title">Actor Page</h1>
     <a href="../index.html">Home</a>
-    <a href="../market/">View Market</a>
+    <a href="../market">View Market</a>
     <br><br>
 
     <script>
@@ -35,9 +35,10 @@
         }
 
         const id = document.cookie.split('=')[1];
+        console.log(id);
         if (!id) {
             alert("Please sign in as an actor first.");
-            window.location.href = "/signin.html"
+            window.location.href = "signin.html"
         }
 
         const query = `query { getActor(id:"${id}"){id, name, inventory{name, desc, stack}} }`
