--- a/public/player_view/signup.html
+++ b/public/player_view/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <script src="js/formBuilder.js"></script>
+    <script src="../js/formBuilder.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
                     const query = `mutation { insertActor(actor: {id: "${id}", name: "${name}", inventory: []}){id,name,inventory{name}} }`;
 
-                    sendQuery(query).then(window.location.href = "/signin.html");
+                    sendQuery(query).then(window.location.href = "signin.html");
                 }
             );
 
