added starter dm page

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <h1>DnD Econ</h1>
-    <a href="market.html">Market View</a>
-    <a href="/player_view">Player View</a>
-    <a href="/dm_view">DM View</a>
+    <a href="market.html">Market View</a><br><br>
+    <a href="/player_view">Player View</a><br><br>
+    <a href="/dm_view">DM View</a><br><br>
 </body>
