--- a/public/player_view/index.html
+++ b/public/player_view/index.html
@@ -13,7 +13,8 @@
 <body>
     <h1 id="title">Actor Page</h1>
     <a href="../index.html">Home</a>
-    <a href="../market">View Market</a>
+    <a href="signin.html">Sign In</a>
+    <a href="../market.html">View Market</a>
     <br><br>
 
     <script>
