added basic market functionality

--- a/public/dm_view/index.html
+++ b/public/dm_view/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 
+<style>
+    p { display: inline; }
+</style>
+
 <head>
-    
+    <script src="../js/formBuilder.js"></script>
 </head>
 
 <body>
     <h1>DM View</h1>
     <a href="../index.html">Home</a>
+   
+    <br><br>
+
+    <b>Items</b>
+    <br>
+    <a href="createItem.html">Create New Item</a><br>
+    <a href="giveItem.html">Give An Item</a>
+
+    <br><br>
+
+    <script>
+    </script>
 </body>
