--- a/public/dm_view/index.html
+++ b/public/dm_view/index.html
@@ -14,11 +14,18 @@
    
     <br><br>
 
+    
     <b>Items</b>
     <br>
     <a href="createItem.html">Create New Item</a><br>
     <a href="giveItem.html">Give An Item</a>
+    
+    <br><br>
 
+    <b>Markets</b>
+    <br>
+    <a href="createMarket.html">Create Market</a><br>
+    <a href="../market.html">View Market</a>
     <br><br>
 
     <script>
